# libmaths

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  install.rst  linear.rst  other.rst  polynomial.rst  series.rst  special.rst  trig.rst
examples/: libmathsGraph.ipynb  libmathsOther.ipynb
funcMath/: fm.py  fmgraph.py  linear.py  other.py  polynomial.py  special.py  trig.py
libmaths/: linear.py  other.py  polynomial.py  series.py  special.py  trig.py
libmaths.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fm.py  test_libmaths.py
