
[metadata]
name            = libmaths
author          = Vinay Venkatesh
author-email    = vinayven01@gmail.com
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.8
project_urls =
    Source Code = https://github.com/Simple2006/libmaths
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

keywords =
    Machine Learning, Math, Python